<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/fragment_contacts_scrolview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <by.dimanolog.testappbalinasoft.custom.CustomMapView
                android:id="@+id/fragment_contacts_map"
                android:layout_width="match_parent"
                android:layout_height="400dp"/>


            <TextView
                android:text="@string/contact_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/NormalText"
               />

            <TextView
                android:id="@+id/fragment_contacts_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_contact_telephone"
                android:gravity="center_vertical"
                android:text="@string/farfor_tel"
                style="@style/NormalText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/our_adress"
                style="@style/NormalText"
                />

            <TextView
                android:id="@+id/fragment_contacts_address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_farfor_address"
                android:gravity="center_vertical"
                android:text="@string/farfor_address1"
                style="@style/NormalText"
                />

            <TextView
                android:id="@+id/fragment_contacts_address2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_farfor_address"
                android:gravity="center_vertical"
                android:text="@string/farfor_address2"
                style="@style/NormalText"
                />

            <TextView
                android:id="@+id/fragment_contacts_address3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_farfor_address"
                android:gravity="center_vertical"
                android:text="@string/farfor_address3"
                style="@style/NormalText"
                />

            <TextView
                android:id="@+id/fragment_contacts_address4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_farfor_address"
                android:gravity="center_vertical"
                android:text="@string/farfor_address4"
                style="@style/NormalText"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>